--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,12 @@
         exports.loadCSS = n : e.loadCSS = n
     }("undefined" != typeof global ? global : this);
     loadCSS('https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css');
+    var trackOutboundLink = function(url) {
+      ga('send', 'event', 'outbound', 'click', url, {
+        'transport': 'beacon',
+        'hitCallback': function(){document.location = url;}
+      });
+    }
   </script>
   <!-- Place favicon.ico in the root directory -->
 
@@ -192,7 +198,7 @@
             The global community<span class="is-hidden-desktop">&nbsp;</span><br class="is-hidden-mobile">for technology startups
           </h1>
         <a href="#memberships" id="join-the-community" class="button is-home-cta is-medium">Join the Community</a>
-        <a href="https://www.techhub.com/events/" class="button is-home-cta is-medium">Attend an Event</a>
+        <a href="https://www.techhub.com/events/" onclick="trackOutboundLink('https://www.techhub.com/events/'); return false;" class="button is-home-cta is-medium">Attend an Event</a>
       </div>
       <div class="locations-button-mobile is-hidden-desktop" id="modal-locations-open">
         Locations
